<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fahed.developer.md_ejemplo7.MainActivityFragment"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical" android:layout_width="fill_parent"
                android:layout_height="240dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true"
                android:background="@android:color/white"
                android:layout_weight="2">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white">

                    <!--- Elemento compartido, android:transitionName  -->
                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:id="@+id/ivLibro1"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_book_one"
                        android:padding="5dp"
                        android:transitionName="@string/string_transition_photo"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="4"
                        android:layout_margin="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_libro1"
                            android:id="@+id/textView100"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimaryText"
                            android:fontFamily="sans-serif-light"
                            android:textStyle="normal"/>
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical" android:layout_width="fill_parent"
                android:layout_height="240dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true"
                android:background="@android:color/white"
                android:layout_weight="2">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white">

                    <!--- Elemento compartido, android:transitionName  -->
                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:id="@+id/ivLibro2"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_book_two"
                        android:padding="5dp"
                        android:transitionName="@string/string_transition_photo"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:gravity="center"
                        android:layout_margin="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_libro2"
                            android:id="@+id/textView101"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimaryText"
                            android:fontFamily="sans-serif-light"
                            android:textStyle="normal"/>
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical" android:layout_width="fill_parent"
                android:layout_height="240dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true"
                android:background="@android:color/white"
                android:layout_weight="2">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white">

                    <!--- Elemento compartido, android:transitionName  -->
                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:id="@+id/ivLibro3"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_book_three"
                        android:padding="5dp"
                        android:transitionName="@string/string_transition_photo"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="4"
                        android:layout_margin="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_libro3"
                            android:id="@+id/textView103"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimaryText"
                            android:fontFamily="sans-serif-light"
                            android:textStyle="normal"/>
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:orientation="vertical" android:layout_width="fill_parent"
                android:layout_height="240dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="6dp"
                card_view:cardUseCompatPadding="true"
                android:background="@android:color/white"
                android:layout_weight="2">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white">

                    <!--- Elemento compartido, android:transitionName  -->
                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="150dp"
                        android:id="@+id/ivLibro4"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/ic_book_four"
                        android:padding="5dp"
                        android:transitionName="@string/string_transition_photo"
                        />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="4"
                        android:layout_margin="3dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_libro4"
                            android:id="@+id/textView104"
                            android:textSize="14sp"
                            android:textColor="@color/colorPrimaryText"
                            android:foreground="?selectableItemBackground"
                            android:fontFamily="sans-serif-light"
                            android:textStyle="normal"
                            />
                    </LinearLayout>


                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
